Fix: 그룹 참여시 그룹 상세 정보에서 미션 정보를 확인 할 수 없던 버그  수정
